--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
- <html>
+<html>
    <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>To-Do App</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>To-Do App</title>
+      <!-- Material Design Lite -->
+      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
+      <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+      <!-- Custom Styles -->
+      <link rel="stylesheet" href="style.css">
    </head>
    <body>
-     <h1>To-Do App</h1>
-     <form id="addToDoForm">
-       <label for="newToDoText">New To-Do:</label>
-       <input type="text" id="newToDoText">
-       <button type="submit">Add To-Do!</button>
-     </form>
-     <ul id="toDoList">
-     </ul>
-     <script src="app.js"></script>
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+         <h1>To-Do App</h1>
+      </header>
+      <main class="mdl-layout__content">
+         <div class="mdl-cell mdl-cell--12-col">
+            <form id="addToDoForm">
+               <label for="newToDoText">New To-Do:</label>
+               <input type="text" id="newToDoText">
+               <button type="submit">Add To-Do!</button>
+            </form>
+         </div>
+         <div class="mdl-cell mdl-cell--10-col mdl-card mdl-shadow--3dp">
+            <ul id="toDoList">
+            </ul>
+            <script src="app.js"></script>
+         </div>
+      </main>
    </body>
- </html>
+</html>
